# lmermod-bot-telegram

./: .dockerignore  Cargo.toml  Dockerfile
.github/workflows/: docker-publish.yml
src/: ip.rs  main.rs
