[package]
name = "lmermod-bot-telegram"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.64"
lazy_static = "1.4.0"
public-ip = "0.2.2"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
telegram-bot2 = { version = "0.3.6", features = ["commands", "daemons"] }
tokio = "1.25.0"
